k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urbanbank
  labels:
    app: urbanbank
    env: production
