k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: urbanbank
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: grafana-datasource-config
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-alerting-config
              mountPath: /etc/grafana/provisioning/alerting/alerting.yaml
              subPath: alerting.yaml
            - name: grafana-dashboard-config
              mountPath: /etc/grafana/provisioning/dashboards/urbanbank-dashboard.json
              subPath: urbanbank-dashboard.json
            - name: grafana-dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards/provider.yaml
              subPath: provider.yaml
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-storage
        - name: grafana-datasource-config
          configMap:
            name: grafana-datasource-config
        - name: grafana-alerting-config
          configMap:
            name: grafana-alerting-config
        - name: grafana-dashboard-config
          configMap:
            name: grafana-dashboard-config
        - name: grafana-dashboard-provider
          configMap:
            name: grafana-dashboard-provider
