k8s/postgres-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: urbanbank
  labels:
    app: postgres-exporter
spec:
  type: ClusterIP
  selector:
    app: postgres-exporter
  ports:
    - name: http
      port: 9187
      targetPort: 9187
